--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-hot-toast": "^2.4.1",
     "react-loader-spinner": "^6.1.6",
     "react-redux": "^9.1.2",
+    "react-responsive-pagination": "^2.6.1",
     "react-router-dom": "^6.24.0",
     "styled-components": "^6.1.11"
   },
