--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "react-redux": "^9.1.2",
     "react-responsive-pagination": "^2.6.1",
     "react-router-dom": "^6.24.0",
-    "styled-components": "^6.1.11"
+    "styled-components": "^6.1.11",
+    "sweetalert2": "^11.14.2"
   },
   "devDependencies": {
     "@types/react": "^18.3.3",
