--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
     "react-responsive-pagination": "^2.6.1",
     "react-router-dom": "^6.24.0",
     "styled-components": "^6.1.11",
-    "sweetalert2": "^11.14.2"
+    "sweetalert2": "^11.14.2",
+    "xlsx": "^0.18.5"
   },
   "devDependencies": {
     "@types/react": "^18.3.3",
